--- a/index.html
+++ b/index.html
@@ -1,85 +1,134 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Prueba-marcas</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Prueba-marcas</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/nvivas/prueba-marcas/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/nvivas/prueba-marcas/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/nvivas/prueba-marcas" class="code">View Prueba-marcas on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/nvivas" class="avatar"><img src="https://avatars2.githubusercontent.com/u/23103588?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/nvivas">nvivas</a> maintains <a href="https://github.com/nvivas/prueba-marcas">Prueba-marcas</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/nvivas/prueba-marcas/tarball/master" class="tar">tar</a><a href="https://github.com/nvivas/prueba-marcas/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+<!DOCTYPE html>
+<html lang="es">
+	<head>
+		<title>MANUAL DE HTML5 Y CSS3</title>
+		<meta charset=UTF-8>
+		<meta name="author" content="Ignacio Vivas">
+		<link rel="stylesheet" type="text/css" href="estilos.css" />
+	</head>
+	<body>
+		<header>
+			<h1>MANUAL DE HTML5 Y CSS3</h1>
+		</header>
+		
+		<table border>
+			<tr> 
+			<td colspan=2><h1>Empezar el html</h1></tr>
+			<tr>
+				<th>&lt;!-- --&gt;
+				<td>- Para comentar una o mas líneas
+			</tr>
+			
+			<tr>
+				<th>&lt;!DOCTYPE&gt;
+				<td>- Doctype es el encargado de indicar al navegador web que el documento que va a abrir es html.</td>
+			</tr>
+			<tr>
+				<th>&lt;html&gt;&lt;/html&gt;
+				<td>- Dentro de esta etiqueta vamos a poner todo nuestro código de html.
+				<ul>
+				<li>lang="es" --> se pone para decir que el documento es en español</li>
+			</ul></td>
+			</tr>
+			<tr>
+				<th>&lt;head&gt;&lt;/head&gt;
+				
+				<td>- Información sobre el documento. Colección de metadatos acerca del documento.
+					<ul>
+						<li>&lt;title>title --> Título de nuestro html&lt;title></li>
+						<li>&lt;meta charset="UTF-8"> --> Indicamos la codificación</li>
+						<li>&lt;meta name="author" content="[Nombre del creador]"> --> Indicamos el nombre del autor del html</li>
+						<li>&lt;link rel="stylesheet" type="text/css" href="estilos.css"> --> Indicamos el donde está nuestro css</li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>&lt;body&gt;&lt;/body&gt;
+				<td>- Contenido del documento. Solo puede haber un body en el documento
+			</tr>
+			
+			<tr><tr> 
+			<td colspan=2><h1>Titulos</h1></tr>
+			<tr>
+				<th>&lt;hn>&lt;/hn>
+				<td>
+					<ul>
+						<li>h1,h2....h6 </li>
+						<li>h1 es la letra más grande y h6 es la más pequeña</li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>&lt;article>&lt;/article>
+				<td>- Composición independiente al documento
+			</tr>
+			<tr>
+				<th>&lt;section>&lt;/section>
+				<td>- Determina que contenido corresponde a qué parte
+			</tr>
+			<tr>
+				<th>&lt;aside>&lt;/aside>
+				<td>- Sección que se relaciona con la página pero que si la eliminamos nada pierde su sentido
+			</tr>
+			<tr>
+				<th>&lt;pre>&lt;/pre>
+				<td>- Texto preformateado. La fuente no cambia. Espacios, tabuladores... Todo lo que está dentro del "pre" lo muestra como está escrito
+			</tr>
+			<tr>
+				<th>&lt;p>&lt;/p>
+				<td>- Indica párrado. Distribución del texto en párrados
+			</tr>
+			<tr>
+				<th>&lt;nav>&lt;/nav
+				<td>- Enlaces de navegación
+			</tr>
+			<tr>
+				<th>&lt;header>&lt;/header>
+				<td>- Cabecera de la página. Aquí pondremos el título, navegación de contenidos..
+			</tr>
+			<tr>
+				<th>&lt;footer>&lt;/footer>
+				<td>- Pie de página
+			</tr>
+			<tr>
+				<th>&lt;address>&lt;/address>
+				<td>- Información de contacto
+			</tr>
+			<tr>
+				<th>&lt;li>&lt;/li>
+				<td>- Lo usamos para poner cada elemento de las listas "ul" o "ol". li es un elemento vacío, así que no hace falta cerrarlo.
+			</tr>
+			<tr>
+				<th>&lt;ul>&lt;/ul>
+				<td>- Listas desordenadas. Puede darse los siguientes valores: (Si no ponemos nada sale por defecto dependiendo del anidamiento)
+					<ul>
+						<li type=disc>disc</li>
+						<li type=square>Square</li>
+						<li type=circle>circle</li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>&lt;ol>&lt;/ol>
+				<td>	
+					- Listas ordenadas: (Formato 1,a,A,I,i)
+					<ol>
+						<li type=1>Números naturales</li>
+						<li type=a>Letras en minúculas</li>
+						<li type=A>Letras en MAYÚSCULAS</li>
+						<li type=I>Número romanos en MAYÚSCULAS</li>
+						<li type=i>Números romanos en minúculas</li>
+					</ol>
+					- Usamos reversed en la etiqueta ol.
+					<ol reversed>
+						<li>Para mostrar las listar en orden invertido</li>
+						<li>Otra línea para la muestra</li>
+					</ol>
+					- Usamos start para empezar en un número o letra que queramos
+					<ol start=5>
+						<li>Para empezar la lista en el número indicado</li>
+						<li>Otra línea para la muestra</li>
+					</ol>
+		</table>
+	</body>
 </html>
