--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>MANUAL DE HTML5 Y CSS3</h1>
 		</header>
 		
-		<table border>
+		<table>
 			<tr> 
 			<td colspan=2><h1>Empezar el html</h1></tr>
 			<tr>
@@ -24,7 +24,7 @@
 				<td>- Doctype es el encargado de indicar al navegador web que el documento que va a abrir es html.</td>
 			</tr>
 			<tr>
-				<th>&lt;html&gt;&lt;/html&gt;
+				<th>&lt;html&gt;&lt;/html&gt;</th>
 				<td>- Dentro de esta etiqueta vamos a poner todo nuestro código de html.
 				<ul>
 				<li>lang="es" --> se pone para decir que el documento es en español</li>
@@ -50,7 +50,7 @@
 			<tr><tr> 
 			<td colspan=2><h1>Titulos</h1></tr>
 			<tr>
-				<th>&lt;hn>&lt;/hn>
+				<th>&lt;hn>&lt;/hn&gt;
 				<td>
 					<ul>
 						<li>h1,h2....h6 </li>
@@ -59,47 +59,47 @@
 				</td>
 			</tr>
 			<tr>
-				<th>&lt;article>&lt;/article>
+				<th>&lt;article&gt;&lt;/article&gt;
 				<td>- Composición independiente al documento
 			</tr>
 			<tr>
-				<th>&lt;section>&lt;/section>
+				<th>&lt;section&gt;&lt;/section&gt;
 				<td>- Determina que contenido corresponde a qué parte
 			</tr>
 			<tr>
-				<th>&lt;aside>&lt;/aside>
+				<th>&lt;aside&gt;&lt;/aside&gt;
 				<td>- Sección que se relaciona con la página pero que si la eliminamos nada pierde su sentido
 			</tr>
 			<tr>
-				<th>&lt;pre>&lt;/pre>
+				<th>&lt;pre&gt;&lt;/pre&gt;
 				<td>- Texto preformateado. La fuente no cambia. Espacios, tabuladores... Todo lo que está dentro del "pre" lo muestra como está escrito
 			</tr>
 			<tr>
-				<th>&lt;p>&lt;/p>
+				<th>&lt;p&gt;&lt;/p&gt;
 				<td>- Indica párrado. Distribución del texto en párrados
 			</tr>
 			<tr>
-				<th>&lt;nav>&lt;/nav
+				<th>&lt;nav&gt;&lt;/nav&gt;
 				<td>- Enlaces de navegación
 			</tr>
 			<tr>
-				<th>&lt;header>&lt;/header>
+				<th>&lt;header&gt;&lt;/header&gt;
 				<td>- Cabecera de la página. Aquí pondremos el título, navegación de contenidos..
 			</tr>
 			<tr>
-				<th>&lt;footer>&lt;/footer>
+				<th>&lt;footer&gt;&lt;/footer&gt;
 				<td>- Pie de página
 			</tr>
 			<tr>
-				<th>&lt;address>&lt;/address>
+				<th>&lt;address&gt;&lt;/address&gt;
 				<td>- Información de contacto
 			</tr>
 			<tr>
-				<th>&lt;li>&lt;/li>
+				<th>&lt;li&gt;&lt;/li&gt;
 				<td>- Lo usamos para poner cada elemento de las listas "ul" o "ol". li es un elemento vacío, así que no hace falta cerrarlo.
 			</tr>
 			<tr>
-				<th>&lt;ul>&lt;/ul>
+				<th>&lt;ul&gt;&lt;/ul&gt;
 				<td>- Listas desordenadas. Puede darse los siguientes valores: (Si no ponemos nada sale por defecto dependiendo del anidamiento)
 					<ul>
 						<li type=disc>disc</li>
@@ -109,7 +109,7 @@
 				</td>
 			</tr>
 			<tr>
-				<th>&lt;ol>&lt;/ol>
+				<th>&lt;ol&gt;&lt;/ol&gt;
 				<td>	
 					- Listas ordenadas: (Formato 1,a,A,I,i)
 					<ol>
@@ -129,6 +129,47 @@
 						<li>Para empezar la lista en el número indicado</li>
 						<li>Otra línea para la muestra</li>
 					</ol>
+				</td>
+			</tr>
+			<tr>
+				<th>&lt;hr&gt;
+				<td> línea horizontal
+			</tr>
+			<tr>
+				<th>&lt;i&gt;&lt;/i&gt;
+				<td><i>letra en cursiva</i>
+			</tr>
+			<tr>
+				<th>&lt;b&gt;&lt;/b&gt;
+				<td><b>Negrita</b>
+			</tr>
+			<tr>
+				<th>&lt;u&gt;&lt;/u&gt;
+				<td><u>subrrayado</u>
+			</tr>
+			<tr>
+				<th>&lt;br&gt;
+				<td>Salto de línea
+			</tr>
+			<tr>
+				<th>&lt;strong&gt;&lt;/strong&gt;
+				<td>Cosas importantes, serias, urgentes
+			</tr>
+			<tr>
+				<th>&lt;small&gt;&lt;/small&gt;
+				<td>
+			</tr>
+			
+				
+				
+
+
+
+
+
+
+
+
 		</table>
 	</body>
 </html>
